src-ken&y/objects/Serial_Transaction__c.object
<CustomObject>
    <customHelpPage>HelpSerials</customHelpPage>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Serial Transactions</relationshipLabel>
        <relationshipName>Serial_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Serial Transactions</relationshipLabel>
        <relationshipName>Serial_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fixed_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fixed Asset</label>
        <referenceTo>Fixed_Asset__c</referenceTo>
        <relationshipLabel>Serial Transactions</relationshipLabel>
        <relationshipName>Serial_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fulfillment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fulfillment</label>
        <referenceTo>Fulfillment__c</referenceTo>
        <relationshipLabel>Serial Transactions</relationshipLabel>
        <relationshipName>Serial_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Transaction</label>
        <referenceTo>Inventory_Transaction__c</referenceTo>
        <relationshipLabel>Serial Transactions</relationshipLabel>
        <relationshipName>Serial_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Serial Transactions</relationshipLabel>
        <relationshipName>Serial_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operation_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operation Transaction</label>
        <referenceTo>Operation_Transaction__c</referenceTo>
        <relationshipLabel>Serial Transactions</relationshipLabel>
        <relationshipName>Serial_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Serial_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Serial Parent</label>
        <referenceTo>Serial__c</referenceTo>
        <relationshipLabel>Serial Transactions (Serial Parent)</relationshipLabel>
        <relationshipName>Serial_Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Serial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Serial</label>
        <referenceTo>Serial__c</referenceTo>
        <relationshipLabel>Serial Transactions</relationshipLabel>
        <relationshipName>Serial_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Receipt</fullName>
                </value>
                <value>
                    <fullName>Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Serial Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Serial Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Serial Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>